--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,11 @@
-apply plugin: 'java'
-apply plugin: 'maven'
+//apply plugin: 'java'
+//apply plugin: 'maven'
+
+plugins {
+    id 'java'
+    id 'maven'
+    id "com.github.spacialcircumstances.gradle-cucumber-reporting" version "0.1.19"
+}
 
 project.ext {
     cucumberVersion = '5.4.0'
@@ -21,6 +27,13 @@ dependencies {
 
 repositories {
     mavenCentral()
+}
+
+
+cucumberReports {
+    outputDir = file('build/reports/html')
+    buildId = '0'
+    reports = files('build/cucumber.json')
 }
 
 test {
